# chip8-emulator

./: .gitignore  CMakeLists.txt  README.md
include/: chip8.h  chip8.hpp  chip8_io.h  chip8_io.hpp
src/: chip8.cpp  chip8_io.cpp  main.cpp
